--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  pull_to_refresh: ^1.6.1
+  pull_to_refresh: ^1.6.3
+  provider: ^4.3.3
+  http: ^0.12.2
+  flutter_secure_storage: ^3.3.5
 
 dev_dependencies:
   flutter_test:
